# qa-api-project

./: .env  README.md  config.py  pyproject.toml
src/enums/: statuses.py
src/utils/api/: api_client.py  api_client_petstore.py
src/utils/data_generators/: order_generator.py  pet_generator.py  user_generator.py
src/utils/schemes/: base.py  order_schemes.py  pet_schemes.py  user_schemes.py
tests/tests_services/: conftest.py  test_order.py  test_pets.py  test_users.py
